[package]
name = "cbor_next"
version = "0.1.1"
edition = "2024"
authors = ["Saurav Sharma <appdroiddeveloper@gmail.com>"]
homepage = "https://github.com/iamsauravsharma/cbor_next"
repository = "https://github.com/iamsauravsharma/cbor_next"
description = "CBOR encoder and decoder"
license = "MIT"
readme = "README.MD"
keywords = ["cbor"]

[dependencies]
half = "2.6.0"
indexmap = "2.9.0"
thiserror = "2.0.12"

[dev-dependencies]
hex = "0.4.3"
rand = "0.9.1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
missing_docs = "warn"
unreachable_pub = "warn"
unused_crate_dependencies = "warn"
unsafe_code = "deny"

[lints.clippy]
all = "deny"
pedantic = "warn"
